Fix overflow issues for <Ellipsis>

--- a/components/text/ellipsis-extends.styl
+++ b/components/text/ellipsis-extends.styl
@@ -1,5 +1,5 @@
 $Ellipsis
-  overflow-x hidden
+  overflow hidden
   text-overflow ellipsis
   white-space nowrap
 
